# mag_sim

./: .gitignore  analysis_console.py  analysis_tui_app.py  analyze.py  check_h5_content.py  config.py  formula_generator.py  main.py  main_gui.py  pyproject.toml  setup.py  simulation.py  test.py  tui_app.py
agent/: node_executor.py
analysis/: utils.py
analysis_cli/: analysis_store.py  modules.py  tools.py
analysis_results/: rename_files.py
analysis_tui/: app.py  app.tcss
batch/: batch_runner.py  csv_tool.py  csv_tool_constant_energy.py  gongji_manager.py  logger_manager.py  manager_api.py  wsl_manager.py
docs/: project_structure.md
gui/: app_config.py  main_window.py  simulation_runner.py
simNew/: analyze.py  config.py  create_field_slice_gif.py  interactive_analyzer_v3.py  main.py  plot_energy_evolution_3d.py  plot_field_evolution_3d.py  plot_total_energy_evolution_3d.py  simulation.py
sim_new/: analyze_fields.py  calculate_average_energy.py  interactive_analyzer.py  interactive_analyzer_v2.py  interactive_analyzer_v3.py  plot_energy_evolution_3d.py  plot_field_evolution.py  plot_field_evolution_3d.py  plot_field_evolution_and_snapshots.py  plot_field_evolution_and_snapshots_v1.5.py  plot_field_evolution_and_snapshots_v2.py  plot_total_energy_evolution_3d.py  temp.py  temp2.py  warpx_analysis_utils.py
sim_old/: 批量分析脚本.py
simulation/: config.py  io_manager.py  magnetic_field_models.py  simulation.py  utils.py
test/: test.py  test_omp_scale.sh
tools/: bbn_pic_analysis.py  coll.py  explore_sigma_constraints.py  explore_temperature_sigma.py  test.py  (+7 more)
(+192 files in other folders)
